syntax = "proto3";
package greet;

message Greeting{
	string firstname = 1;
	string lastname =2;
}

message GreetingRequest{
	Greeting request = 1;
}
message GreetingResponse{
	string response =1;
}
service GreetingService{
	rpc GreetFunc(GreetingRequest) returns (GreetingResponse) {}
}